--- a/index.html
+++ b/index.html
@@ -4,49 +4,74 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Screen Timer</title>
-<meta name="theme-color" content="#1f252d" />
 
 <style>
 :root{
-  --card: rgba(255,255,255,0.05);
-  --line: rgba(255,255,255,0.12);
-  --text:#f3f6fb;
-  --muted: rgba(243,246,251,0.65);
-  --radius:18px;
+  --bg:#000000;
+  --card:#0a0a0a;
+  --line: rgba(255,255,255,0.14);
+  --text:#ffffff;
+  --muted: rgba(255,255,255,0.68);
+  --btnbg: rgba(255,255,255,0.06);
+  --btnhover: rgba(255,255,255,0.10);
+  --danger:#ff5c7a;
+
+  --radius:16px;
   --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Courier New", monospace;
-  --sans: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto;
+  --sans: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
 }
 
-/* ===== Soft Themes ===== */
+/* ===== Flat, soft themes (no glow, no gradients) ===== */
 
-body.theme-mist{
-  --bg1:#1f252d;
-  --bg2:#232b35;
-  --accent:#a8c3d8;
-  --accent2:#c9dce8;
+body.theme-pure-dark{
+  --bg:#000000;
+  --card:#0a0a0a;
+  --line: rgba(255,255,255,0.14);
+  --text:#ffffff;
+  --muted: rgba(255,255,255,0.68);
+  --btnbg: rgba(255,255,255,0.06);
+  --btnhover: rgba(255,255,255,0.10);
 }
 
-body.theme-sage{
-  --bg1:#1e2421;
-  --bg2:#232a26;
-  --accent:#9fb9a3;
-  --accent2:#c7dccb;
+body.theme-graphite{
+  --bg:#121316;
+  --card:#171a1f;
+  --line: rgba(255,255,255,0.12);
+  --text:#f4f6f8;
+  --muted: rgba(244,246,248,0.65);
+  --btnbg: rgba(255,255,255,0.05);
+  --btnhover: rgba(255,255,255,0.09);
 }
 
-body.theme-stone{
-  --bg1:#24221f;
-  --bg2:#2a2824;
-  --accent:#c8b9a6;
-  --accent2:#e2d6c8;
+body.theme-paper{
+  --bg:#f7f7f5;
+  --card:#ffffff;
+  --line: rgba(10,10,10,0.12);
+  --text:#0a0a0a;
+  --muted: rgba(10,10,10,0.62);
+  --btnbg: rgba(10,10,10,0.05);
+  --btnhover: rgba(10,10,10,0.09);
 }
+
+body.theme-sepia{
+  --bg:#f4efe6;
+  --card:#fffaf0;
+  --line: rgba(20,12,6,0.14);
+  --text:#140c06;
+  --muted: rgba(20,12,6,0.62);
+  --btnbg: rgba(20,12,6,0.05);
+  --btnhover: rgba(20,12,6,0.09);
+}
+
+/* ===== Base layout ===== */
 
 *{box-sizing:border-box;}
 html,body{height:100%;margin:0;}
 
 body{
-  font-family:var(--sans);
-  color:var(--text);
-  background:linear-gradient(180deg,var(--bg1),var(--bg2));
+  font-family: var(--sans);
+  background: var(--bg);
+  color: var(--text);
   display:flex;
   align-items:center;
   justify-content:center;
@@ -54,34 +79,39 @@ body{
 }
 
 .card{
-  width:min(680px,100%);
-  border-radius:var(--radius);
+  width:min(640px,100%);
+  background: var(--card);
   border:1px solid var(--line);
-  background:var(--card);
-  backdrop-filter:blur(12px);
+  border-radius: var(--radius);
   padding:22px;
-  box-shadow:0 25px 60px rgba(0,0,0,0.5);
 }
 
-.row{
+.top{
   display:flex;
-  justify-content:space-between;
   align-items:center;
-  flex-wrap:wrap;
-  gap:12px;
+  justify-content:space-between;
+  gap: 12px;
+  flex-wrap: wrap;
+}
+
+.status{
+  font-size: 12px;
+  color: var(--muted);
+  font-weight: 650;
 }
 
 .time{
-  font-family:var(--mono);
-  font-size:clamp(56px,9vw,92px);
-  letter-spacing:1px;
-  margin:18px 0;
+  font-family: var(--mono);
+  font-size: clamp(58px, 10vw, 96px);
+  letter-spacing: 1px;
+  margin: 18px 0 16px 0;
 }
 
 .controls{
   display:flex;
   gap:10px;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
+  align-items:center;
 }
 
 .field{
@@ -89,56 +119,56 @@ body{
   align-items:center;
   gap:8px;
   border:1px solid var(--line);
-  border-radius:14px;
+  border-radius: 12px;
   padding:8px 10px;
-  background:rgba(0,0,0,0.15);
+  background: transparent;
 }
 
 label{
   font-size:12px;
-  color:var(--muted);
-  font-weight:600;
+  color: var(--muted);
+  font-weight: 650;
 }
 
 input, select{
   border:0;
   outline:none;
-  background:transparent;
-  color:var(--text);
-  font-weight:600;
-  font-family:var(--mono);
+  background: transparent;
+  color: var(--text);
+  font-weight: 650;
+  font-family: var(--mono);
 }
 
 input[type="number"]{width:80px;}
 
 button{
   border:1px solid var(--line);
-  background:rgba(0,0,0,0.18);
-  color:var(--text);
+  background: var(--btnbg);
+  color: var(--text);
   padding:8px 12px;
-  border-radius:14px;
+  border-radius: 12px;
   cursor:pointer;
-  font-weight:700;
+  font-weight: 750;
 }
 
-button:hover{background:rgba(255,255,255,0.07);}
-
-button.primary{
-  border-color:var(--accent);
-  color:var(--accent);
-}
+button:hover{background: var(--btnhover);}
 
 button.danger{
-  border-color:#ff7a8c;
-  color:#ff7a8c;
+  color: var(--danger);
+  border-color: rgba(255,92,122,0.45);
 }
 
-.status{
-  font-size:12px;
-  color:var(--muted);
+button.primary{
+  border-color: var(--line);
 }
 
-/* Overlay */
+.small{
+  margin: 10px 0 0 0;
+  font-size: 12px;
+  color: var(--muted);
+}
+
+/* ===== Pop-up ===== */
 
 .overlay{
   position:fixed;
@@ -146,53 +176,59 @@ button.danger{
   display:none;
   align-items:center;
   justify-content:center;
-  background:rgba(0,0,0,0.6);
-  backdrop-filter:blur(10px);
+  padding:20px;
+  background: rgba(0,0,0,0.55);
+}
+
+body.theme-paper .overlay,
+body.theme-sepia .overlay{
+  background: rgba(10,10,10,0.35);
 }
 
 .overlay.show{display:flex;}
 
 .modal{
-  width:min(500px,100%);
-  background:rgba(15,17,20,0.9);
-  border-radius:20px;
-  border:1px solid var(--accent2);
-  padding:25px;
+  width:min(520px,100%);
+  background: var(--card);
+  border:1px solid var(--line);
+  border-radius: 16px;
+  padding:22px;
   text-align:center;
 }
 
 .modal h2{
-  margin:0 0 10px 0;
-  font-weight:800;
+  margin: 0 0 10px 0;
+  font-weight: 850;
+  font-size: 18px;
 }
 
 .modal p{
-  margin:0 0 18px 0;
-  color:var(--muted);
+  margin: 0 0 18px 0;
+  color: var(--muted);
+  line-height: 1.55;
 }
-
 </style>
 </head>
 
-<body class="theme-mist">
+<body class="theme-pure-dark">
 
 <main class="card">
-
-  <div class="row">
+  <div class="top">
     <div class="status" id="stateText">Stopped</div>
 
     <div class="controls">
       <div class="field">
-        <label>Minutes</label>
-        <input id="minutesInput" type="number" min="1" max="600" value="20">
+        <label for="minutesInput">Minutes</label>
+        <input id="minutesInput" type="number" min="1" max="600" value="20" />
       </div>
 
       <div class="field">
-        <label>Theme</label>
+        <label for="themeSelect">Theme</label>
         <select id="themeSelect">
-          <option value="theme-mist" selected>Mist</option>
-          <option value="theme-sage">Sage</option>
-          <option value="theme-stone">Warm Stone</option>
+          <option value="theme-pure-dark" selected>Pure Dark</option>
+          <option value="theme-graphite">Graphite</option>
+          <option value="theme-paper">Paper</option>
+          <option value="theme-sepia">Sepia</option>
         </select>
       </div>
     </div>
@@ -203,14 +239,15 @@ button.danger{
   <div class="controls">
     <button class="primary" id="startBtn">Start</button>
     <button id="pauseBtn">Pause</button>
-    <button id="resetBtn" class="danger">Reset</button>
+    <button class="danger" id="resetBtn">Reset</button>
     <button id="notifBtn">Enable notifications</button>
   </div>
 
+  <p class="small">Keep this tab open. The timer continues while you switch tabs.</p>
 </main>
 
 <div class="overlay" id="overlay">
-  <div class="modal">
+  <div class="modal" role="dialog" aria-modal="true">
     <h2>Take a break</h2>
     <p>Timer finished.</p>
     <button class="primary" id="dismissBtn">Dismiss</button>
@@ -219,120 +256,138 @@ button.danger{
 
 <script>
 (function(){
+  const display = document.getElementById("timeDisplay");
+  const minutesInput = document.getElementById("minutesInput");
+  const themeSelect = document.getElementById("themeSelect");
+  const stateText = document.getElementById("stateText");
 
-const display = document.getElementById("timeDisplay");
-const minutesInput = document.getElementById("minutesInput");
-const themeSelect = document.getElementById("themeSelect");
-const stateText = document.getElementById("stateText");
+  const overlay = document.getElementById("overlay");
+  const dismissBtn = document.getElementById("dismissBtn");
 
-const overlay = document.getElementById("overlay");
-const dismissBtn = document.getElementById("dismissBtn");
+  let duration = 20 * 60 * 1000;
+  let remaining = duration;
+  let running = false;
+  let lastTick = performance.now();
 
-let duration = 20*60*1000;
-let remaining = duration;
-let running = false;
-let lastTick = performance.now();
+  function format(ms){
+    const total = Math.ceil(ms / 1000);
+    const m = Math.floor(total / 60);
+    const s = total % 60;
+    return String(m).padStart(2,"0") + ":" + String(s).padStart(2,"0");
+  }
 
-function format(ms){
-  const t = Math.ceil(ms/1000);
-  const m = Math.floor(t/60);
-  const s = t%60;
-  return String(m).padStart(2,"0")+":"+String(s).padStart(2,"0");
-}
+  function tick(){
+    const now = performance.now();
+    const dt = now - lastTick;
+    lastTick = now;
 
-function update(){
-  const now = performance.now();
-  const dt = now - lastTick;
-  lastTick = now;
+    if (running){
+      remaining -= dt;
+      if (remaining <= 0){
+        finish();
+        return;
+      }
+    }
 
-  if(running){
-    remaining -= dt;
-    if(remaining<=0){
-      finish();
+    display.textContent = format(remaining);
+    requestAnimationFrame(tick);
+  }
+
+  function start(){
+    overlay.classList.remove("show");
+    if (remaining <= 0) remaining = duration;
+    running = true;
+    stateText.textContent = "Running";
+    lastTick = performance.now();
+  }
+
+  function pause(){
+    running = false;
+    stateText.textContent = "Paused";
+  }
+
+  function reset(){
+    running = false;
+    remaining = duration;
+    display.textContent = format(remaining);
+    stateText.textContent = "Stopped";
+    overlay.classList.remove("show");
+  }
+
+  function finish(){
+    running = false;
+    remaining = 0;
+    display.textContent = "00:00";
+    stateText.textContent = "Finished";
+    notify();
+    playSound();
+    overlay.classList.add("show");
+  }
+
+  function requestNotif(){
+    if (!("Notification" in window)) {
+      alert("Notifications are not supported in this browser.");
       return;
     }
+    Notification.requestPermission().then((perm) => {
+      if (perm === "granted") {
+        new Notification("Notifications enabled", { body: "You will get an alert when the timer ends." });
+      } else if (perm === "denied") {
+        alert("Notifications are blocked. Allow them in your browser site settings and refresh.");
+      }
+    });
   }
+
+  function notify(){
+    if ("Notification" in window && Notification.permission === "granted"){
+      new Notification("Take a break", { body: "Timer finished." });
+    }
+  }
+
+  function playSound(){
+    // Non musical noise burst
+    try{
+      const AudioCtx = window.AudioContext || window.webkitAudioContext;
+      const ctx = new AudioCtx();
+
+      const bufferSize = ctx.sampleRate * 0.8;
+      const buffer = ctx.createBuffer(1, bufferSize, ctx.sampleRate);
+      const data = buffer.getChannelData(0);
+
+      for (let i = 0; i < data.length; i++){
+        data[i] = (Math.random() * 2 - 1) * 0.18;
+      }
+
+      const src = ctx.createBufferSource();
+      src.buffer = buffer;
+      src.connect(ctx.destination);
+      src.start();
+
+      setTimeout(() => ctx.close(), 1200);
+    } catch(e){}
+  }
+
+  minutesInput.addEventListener("change", () => {
+    const m = Math.max(1, Number(minutesInput.value || 20));
+    minutesInput.value = String(m);
+    duration = m * 60 * 1000;
+    remaining = duration;
+    display.textContent = format(remaining);
+    if (!running) stateText.textContent = "Stopped";
+  });
+
+  themeSelect.addEventListener("change", () => {
+    document.body.className = themeSelect.value;
+  });
+
+  document.getElementById("startBtn").addEventListener("click", start);
+  document.getElementById("pauseBtn").addEventListener("click", pause);
+  document.getElementById("resetBtn").addEventListener("click", reset);
+  document.getElementById("notifBtn").addEventListener("click", requestNotif);
+  dismissBtn.addEventListener("click", () => overlay.classList.remove("show"));
 
   display.textContent = format(remaining);
-  requestAnimationFrame(update);
-}
-
-function start(){
-  if(remaining<=0) remaining=duration;
-  running=true;
-  stateText.textContent="Running";
-  lastTick=performance.now();
-}
-
-function pause(){
-  running=false;
-  stateText.textContent="Paused";
-}
-
-function reset(){
-  running=false;
-  remaining=duration;
-  display.textContent=format(remaining);
-  stateText.textContent="Stopped";
-}
-
-function finish(){
-  running=false;
-  remaining=0;
-  display.textContent="00:00";
-  stateText.textContent="Finished";
-  notify();
-  playSound();
-  overlay.classList.add("show");
-}
-
-function notify(){
-  if("Notification" in window && Notification.permission==="granted"){
-    new Notification("Take a break",{body:"Timer finished."});
-  }
-}
-
-function playSound(){
-  try{
-    const ctx=new (window.AudioContext||window.webkitAudioContext)();
-    const buffer=ctx.createBuffer(1,ctx.sampleRate*0.8,ctx.sampleRate);
-    const data=buffer.getChannelData(0);
-    for(let i=0;i<data.length;i++){
-      data[i]=(Math.random()*2-1)*0.2;
-    }
-    const src=ctx.createBufferSource();
-    src.buffer=buffer;
-    src.connect(ctx.destination);
-    src.start();
-  }catch(e){}
-}
-
-function requestNotif(){
-  if("Notification" in window){
-    Notification.requestPermission();
-  }
-}
-
-minutesInput.addEventListener("change",()=>{
-  const m=Math.max(1,Number(minutesInput.value));
-  duration=m*60*1000;
-  remaining=duration;
-  display.textContent=format(remaining);
-});
-
-themeSelect.addEventListener("change",()=>{
-  document.body.className=themeSelect.value;
-});
-
-document.getElementById("startBtn").onclick=start;
-document.getElementById("pauseBtn").onclick=pause;
-document.getElementById("resetBtn").onclick=reset;
-document.getElementById("notifBtn").onclick=requestNotif;
-dismissBtn.onclick=()=>overlay.classList.remove("show");
-
-display.textContent=format(remaining);
-requestAnimationFrame(update);
-
+  requestAnimationFrame(tick);
 })();
 </script>
 
